--- a/src/Signup/Signup.css
+++ b/src/Signup/Signup.css
@@ -24,23 +24,13 @@
 }
 
 .signup-form .input-group input {
-  width: 100%;
+  width: 100;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
   font-size: 14px;
 }
 
-.signup-form .signup-button {
-  width: 100%;
-  padding: 10px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-}
 
 .signup-form .signup-button:hover {
   background-color: #45a049;
